src/snapshots/todoro__ui__tests__selecting_several_items.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"╭───────────── Monday, October 5 2026 (today) ─────────────╮"
"│1. Buy milk                                               │"
"│2. Write report                                           │"
"│3. Call mom                                               │"
"│4. Book dentist                                           │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰──── h ← prev day · k ↑ up · j ↓ down · next day → l ─────╯"
" VISUAL   x done  m pin  d delete  y copy  esc cancel       "
