src/snapshots/todoro__ui__tests__setup_screen_when_moving_old_todos_and_after_a_mistake.snap
---
source: src/ui.rs
expression: "render_setup(&setup, 40, 24).backend()"
---
"                                        "
"                                        "
"  ╭ Welcome to todoro ───────────────╮  "
"  │ Choose a folder for your todos.  │  "
"  │ Everything goes in it: each      │  "
"  │ workspace is a folder inside,    │  "
"  │ with its todos and notes. todoro │  "
"  │ never backs it up for you, so    │  "
"  │ put it somewhere you back up, or │  "
"  │ copy it yourself.                │  "
"  │                                  │  "
"  │ Your existing todos will move    │  "
"  │ into this first workspace.       │  "
"  │                                  │  "
"  │ Folder                           │  "
"  │ › /home/sam/todoro               │  "
"  │                                  │  "
"  │ First workspace                  │  "
"  │   Personal                       │  "
"  │                                  │  "
"  │ A workspace name can't have / \  │  "
"  │ : * ? " < > or |                 │  "
"  ╰───────── enter continue ─────────╯  "
"                                        "
