src/snapshots/todoro__ui__tests__today_with_items.snap
---
source: src/ui.rs
expression: render(&app).backend()
---
"╭───────────── Monday, October 5 2026 (today) ─────────────╮"
"│1. Buy milk                                               │"
"│2. Write report                                           │"
"│3. Call mom                                               │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰──── h ← prev day · k ↑ up · j ↓ down · next day → l ─────╯"
" NORMAL   a add  e edit  d delete  q quit                   "
