src/snapshots/todoro__ui__tests__triaged_items_keep_their_layout.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"╭───────────── Monday, October 5 2026 (today) ─────────────╮"
"│1. Fix the leaking tap                                    │"
"│2. Book flights for the holiday before the prices go up   │"
"│   again ⚲                                                │"
"│3. Water the plants                                       │"
"│4. Sort the recycling                                     │"
"│                                                          │"
"│                                                          │"
"╰──── h ← prev day · k ↑ up · j ↓ down · next day → l ─────╯"
" NORMAL   a add  e edit  x done  d delete  ↵ notes  ? help  "
