src/snapshots/todoro__ui__tests__typing_a_long_item_wraps_and_the_cursor_follows.snap
---
source: src/ui.rs
expression: terminal.backend()
---
"╭───────────── Monday, October 5 2026 (today) ─────────────╮"
"│1. Buy milk                                               │"
"│2. Ring the council about the parking permit renewal and  │"
"│   ask                                                    │"
"│3. Call mom                                               │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰──── h ← prev day · k ↑ up · j ↓ down · next day → l ─────╯"
" INSERT   ←/→ move  enter/esc save  (empty discards)        "
