src/snapshots/todoro__ui__tests__viewing_notes.snap
---
source: src/ui.rs
expression: "render_sized(&app, 60, 40).backend()"
---
"╭────────────────── 1. Plan the offsite ───────────────────╮"
"│ Plan                                                     │"
"│ ━━━━                                                     │"
"│                                                          │"
"│ See the draft and the budget.xlsx sheet, then ask Sam    │"
"│ (https://example.com).                                   │"
"│                                                          │"
"│ To do                                                    │"
"│ ─────                                                    │"
"│                                                          │"
"│ ☑ Book a room                                            │"
"│ ☐ Send the agenda                                        │"
"│   ◦ with the numbers                                     │"
"│                                                          │"
"│ 1. First                                                 │"
"│ 2. Second                                                │"
"│                                                          │"
"│ ▌ Keep it short.                                         │"
"│                                                          │"
"│ ▏ let total = sum(q3);                                   │"
"│                                                          │"
"│ Who │ When                                               │"
"│ ────┼─────                                               │"
"│ Sam │ Mon                                                │"
"│                                                          │"
"│ ──────────────────────────────────────────────────────── │"
"│                                                          │"
"│ The end.                                                 │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰───────────── j/k scroll · i edit · esc back ──────── All ╯"
" VIEW   j/k scroll  i edit  esc back  ? help                "
